--- a/nessie/docker/trino/etc/jvm.config
+++ b/nessie/docker/trino/etc/jvm.config
@@ -9,5 +9,7 @@
 -XX:ReservedCodeCacheSize=256M
 -XX:PerMethodRecompilationCutoff=10000
 -XX:PerBytecodeRecompilationCutoff=10000
+-XX:+UnlockDiagnosticVMOptions
+-XX:G1NumCollectionsKeepPinned=10000000
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
