--- a/nessie/docker/trino/etc/log.properties
+++ b/nessie/docker/trino/etc/log.properties
@@ -1,7 +1,7 @@
 io.trino=INFO
 
 # show classpath for plugins
-io.trino.server.PluginManager=DEBUG
+io.trino.server.PluginManager=INFO
 
 # Maven plugin loading code
 com.ning.http.client=WARN
@@ -9,3 +9,5 @@ io.trino.server.security.oauth2=DEBUG
 io.trino.server.ui.OAuth2WebUiAuthenticationFilter=DEBUG
 io.trino.sql.planner=INFO
 io.trino.execution=INFO
+io.trino.plugin.iceberg.level=DEBUG
+io.trino.plugin.nessie.level=DEBUG
