fix: update some configs

--- a/nessie/docker/trino/etc/catalog/iceberg.properties
+++ b/nessie/docker/trino/etc/catalog/iceberg.properties
@@ -1,7 +1,7 @@
 connector.name=iceberg
 
 iceberg.catalog.type=nessie
-# Trino supports Nessie api v2 as of 450
+# Trino supports Nessie API v2 as of 450
 iceberg.nessie-catalog.uri=http://nessie:19120/api/v2
 iceberg.nessie-catalog.ref=main
 iceberg.nessie-catalog.default-warehouse-dir=s3://iceberg
