--- a/nessie/docker-compose.yaml
+++ b/nessie/docker-compose.yaml
@@ -1,6 +1,5 @@
 services:
   minio:
-    # profiles: [ "hive", "iceberg" ]
     container_name: minio
     image: minio/minio
     ports:
@@ -21,7 +20,6 @@ services:
     restart: unless-stopped
 
   minio-client:
-    # profiles: [ "hive", "iceberg" ]
     container_name: minio-client
     image: minio/mc
     entrypoint: >
@@ -43,7 +41,6 @@ services:
     restart: "no"
 
   postgres:
-    # profiles: [ "hive" ]
     container_name: postgres
     image: postgres:14-alpine
     ports:
@@ -62,7 +59,6 @@ services:
     restart: unless-stopped
 
   hive-metastore:
-    # profiles: [ "hive" ]
     container_name: hive-metastore
     image: starburstdata/hive:3.1.3-e.6
     ports:
@@ -82,7 +78,6 @@ services:
     restart: unless-stopped
 
   nessie:
-    # profiles: [ "hive", "iceberg" ]
     container_name: nessie
     image: ghcr.io/projectnessie/nessie:0.101.3
     ports:
@@ -93,7 +88,6 @@ services:
     restart: unless-stopped
 
   trino:
-    # profiles: [ "hive", "iceberg" ]
     container_name: trino
     hostname: trino
     image: trinodb/trino:450
@@ -110,9 +104,8 @@ services:
     restart: unless-stopped
 
   dremio:
-    # profiles: [ "iceberg" ]
     container_name: dremio
-    image: dremio/dremio-oss:latest
+    image: dremio/dremio-oss:25.2
     ports:
       - "9047:9047"
       - "31010:31010"
