imp: replace database with pgvector

--- a/temporal/docker-compose.yaml
+++ b/temporal/docker-compose.yaml
@@ -1,16 +1,18 @@
 services:
   postgres:
     container_name: postgres
-    image: postgres:14-alpine
+    image: pgvector/pgvector:0.8.0-pg14
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: temporal
-      POSTGRES_PASSWORD: temporal
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     volumes:
+      - ./docker/postgres/:/docker-entrypoint-initdb.d/
       - ./docker/volumes/postgres:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD", "pg_isready", "-U", "temporal" ]
+      test: [ "CMD", "pg_isready", "-U", "postgres" ]
       interval: 10s
       retries: 3
       start_period: 5s
@@ -26,30 +28,31 @@ services:
       - DB_PORT=5432
       - POSTGRES_USER=temporal
       - POSTGRES_PWD=temporal
-      - POSTGRES_SEEDS=postgres
+      - POSTGRES_SEEDS=postgres # server host name
       - DYNAMIC_CONFIG_FILE_PATH=config/dynamicconfig/development-sql.yaml
     volumes:
-      - ./docker/dynamicconfig:/etc/temporal/config/dynamicconfig
+      - ./docker/temporal:/etc/temporal/config/dynamicconfig
     depends_on:
       - postgres
 
   temporal-admin-tools:
     container_name: temporal-admin-tools
-    depends_on:
-      - temporal
+    image: temporalio/admin-tools:${TEMPORAL_ADMINTOOLS_VERSION}
     environment:
       - TEMPORAL_ADDRESS=temporal:7233
       - TEMPORAL_CLI_ADDRESS=temporal:7233
-    image: temporalio/admin-tools:${TEMPORAL_ADMINTOOLS_VERSION}
     stdin_open: true
     tty: true
-  temporal-ui:
-    container_name: temporal-ui
     depends_on:
       - temporal
+
+  temporal-ui:
+    container_name: temporal-ui
+    image: temporalio/ui:${TEMPORAL_UI_VERSION}
+    ports:
+      - "8080:8080"
     environment:
       - TEMPORAL_ADDRESS=temporal:7233
       - TEMPORAL_CORS_ORIGINS=http://localhost:3000
-    image: temporalio/ui:${TEMPORAL_UI_VERSION}
-    ports:
-      - 8080:8080
+    depends_on:
+      - temporal
