--- a/temporal/docker-compose.yaml
+++ b/temporal/docker-compose.yaml
@@ -1,18 +1,16 @@
 services:
   postgres:
     container_name: postgres
-    image: pgvector/pgvector:0.8.0-pg14
+    image: postgres:14-alpine
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: temporal
+      POSTGRES_PASSWORD: temporal
     volumes:
-      - ./docker/postgres/:/docker-entrypoint-initdb.d/
       - ./docker/volumes/postgres:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD", "pg_isready", "-U", "postgres" ]
+      test: [ "CMD", "pg_isready", "-U", "temporal" ]
       interval: 10s
       retries: 3
       start_period: 5s
